
name:                rk
version:             0.1.0.0
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable rk-exe
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , linear
                     , vector
                     , reflection
  default-language:    Haskell2010

